--- a/requirements.txt
+++ b/requirements.txt
@@ -1,104 +1,104 @@
-annotated-types==0.7.0
-anyio==4.4.0
-asttokens==2.4.1
-blinker==1.8.2
-cachetools==5.4.0
-certifi==2024.7.4
-charset-normalizer==3.3.2
-click==8.1.7
-colorama==0.4.6
-comm==0.2.2
-contourpy==1.2.1
-cycler==0.12.1
-debugpy==1.8.2
-decorator==5.1.1
-distlib==0.3.8
-dnspython==2.6.1
-executing==2.0.1
-filelock==3.15.4
-Flask==3.0.3
-Flask-Cors==4.0.1
-fonttools==4.53.1
-fsspec==2024.6.1
-gensim==4.3.3
-google-ai-generativelanguage==0.6.6
-google-api-core==2.19.1
-google-api-python-client==2.140.0
-google-auth==2.33.0
-google-auth-httplib2==0.2.0
-google-generativeai==0.7.2
-googleapis-common-protos==1.63.2
-gradio_client==1.2.0
-grpcio==1.65.4
-grpcio-status==1.62.3
-h11==0.14.0
-httpcore==1.0.5
-httplib2==0.22.0
-httpx==0.27.0
-huggingface-hub==0.24.5
-idna==3.7
-imbalanced-learn==0.12.3
-imblearn==0.0
-ipykernel==6.29.5
-ipython==8.26.0
-itsdangerous==2.2.0
-jedi==0.19.1
-Jinja2==3.1.4
-joblib==1.4.2
-jupyter_client==8.6.2
-jupyter_core==5.7.2
-kiwisolver==1.4.5
-lightgbm==4.5.0
-MarkupSafe==2.1.5
-matplotlib==3.9.1
-matplotlib-inline==0.1.7
-nest-asyncio==1.6.0
-nltk==3.8.2
-numpy==1.26.4
-packaging==24.1
-pandas==2.2.2
-parso==0.8.4
-pillow==10.4.0
-platformdirs==4.2.2
-prompt_toolkit==3.0.47
-proto-plus==1.24.0
-protobuf==4.25.4
-psutil==6.0.0
-pure-eval==0.2.2
-pyasn1==0.6.0
-pyasn1_modules==0.4.0
-pydantic==2.8.2
-pydantic_core==2.20.1
-Pygments==2.18.0
-pymongo==4.8.0
-pyparsing==3.1.2
-python-dateutil==2.9.0.post0
-python-dotenv==1.0.1
-pytz==2024.1
-pywin32==306
-PyYAML==6.0.1
-pyzmq==26.0.3
-regex==2024.7.24
-requests==2.32.3
-rsa==4.9
-scikit-learn==1.5.1
-scipy==1.13.1
-seaborn==0.13.2
-six==1.16.0
-smart-open==7.0.4
-sniffio==1.3.1
-stack-data==0.6.3
-threadpoolctl==3.5.0
-tornado==6.4.1
-tqdm==4.66.4
-traitlets==5.14.3
-typing_extensions==4.12.2
-tzdata==2024.1
-uritemplate==4.1.1
-urllib3==2.2.2
-virtualenv==20.26.3
-wcwidth==0.2.13
-websockets==12.0
-Werkzeug==3.0.3
-wrapt==1.16.0
-xgboost==2.1.0
+annotated-types
+anyio
+asttokens
+blinker
+cachetools
+certifi
+charset-normalizer
+click
+colorama
+comm
+contourpy
+cycler
+debugpy
+decorator
+distlib
+dnspython
+executing
+filelock
+Flask
+Flask-Cors
+fonttools
+fsspec
+gensim
+google-ai-generativelanguage
+google-api-core
+google-api-python-client
+google-auth
+google-auth-httplib2
+google-generativeai
+googleapis-common-protos
+gradio_client
+grpcio
+grpcio-status
+h11
+httpcore
+httplib2
+httpx
+huggingface-hub
+idna
+imbalanced-learn
+imblearn
+ipykernel
+ipython
+itsdangerous
+jedi
+Jinja2
+joblib
+jupyter_client
+jupyter_core
+kiwisolver
+lightgbm
+MarkupSafe
+matplotlib
+matplotlib-inline
+nest-asyncio
+nltk
+numpy
+packaging
+pandas
+parso
+pillow
+platformdirs
+prompt_toolkit
+proto-plus
+protobuf
+psutil
+pure-eval
+pyasn1
+pyasn1_modules
+pydantic
+pydantic_core
+Pygments
+pymongo
+pyparsing
+python-dateutil
+python-dotenv
+pytz
+pywin32
+PyYAML
+pyzmq
+regex
+requests
+rsa
+scikit-learn
+scipy
+seaborn
+six
+smart-open
+sniffio
+stack-data
+threadpoolctl
+tornado
+tqdm
+traitlets
+typing_extensions
+tzdata
+uritemplate
+urllib3
+virtualenv
+wcwidth
+websockets
+Werkzeug
+wrapt
+xgboost
